--- a/HarmonyOS/local.properties
+++ b/HarmonyOS/local.properties
@@ -6,3 +6,7 @@
 #
 # For customization when using a Version Control System, please read the header note.
 sdk.dir=F:/huawei/opensdk
+nodejs.dir=D:/Huawei/node
+ohpm.dir=C:/Users/LEGION/ohpm/ohpm-1.4.0
+npm.config.dir=D:/Huawei/node/node_modules/npm/.npmrc
+hwsdk.dir=D:/Huawei/sdk4
