迁移至HM4系统

--- a/HarmonyOS4_REAL/oh-package.json5
+++ b/HarmonyOS4_REAL/oh-package.json5
@@ -1,5 +1,5 @@
 {
-  "name": "harmonyos4",
+  "name": "harmonyos4_real",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
   "main": "",
