--- a/HarmonyOS4_REAL/AppScope/app.json5
+++ b/HarmonyOS4_REAL/AppScope/app.json5
@@ -1,6 +1,6 @@
 {
   "app": {
-    "bundleName": "com.example.harmonyos4",
+    "bundleName": "com.example.harmonyos4_real",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
